Add name details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <h1>[Your Name]</h1>
+        <h1>Kelechi Daniel</h1>
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -24,7 +24,7 @@
     </header>
 
     <section id="home" class="hero">
-      <h2>Yo, I'm [Your Name]!</h2>
+      <h2>Yo, I'm Kelechi Daniel!</h2>
       <p>
         Building rad stuff with code & creativity. Scroll to vibe with my work!
       </p>
@@ -34,9 +34,8 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        I'm a [your profession, e.g., web dev, designer] who loves crafting
-        pixel-perfect experiences. Fueled by coffee, code, and a passion for
-        dope designs.
+        I'm a frontend web dev who loves crafting pixel-perfect experiences.
+        Fueled by coffee, code, and a passion for dope designs.
       </p>
     </section>
 
@@ -62,13 +61,13 @@
       <h2>Hit Me Up</h2>
       <p>
         Reach out at
-        <a href="mailto:your.email@example.com">your.email@example.com</a> or
-        connect on [add social links].
+        <a href="mailto:peterrdaniel89@gmail.com">peterrdaniel89@gmail.com</a>
+        or connect on [add social links].
       </p>
     </section>
 
     <footer>
-      <p>© 2025 [Your Name]. Built with mad vibes.</p>
+      <p>© 2025 Kelechi Daniel. Built with mad vibes.</p>
     </footer>
   </body>
 </html>
